--- a/apps/web/src/app/admin-console/organizations/settings/account.component.html
+++ b/apps/web/src/app/admin-console/organizations/settings/account.component.html
@@ -57,7 +57,10 @@
     org && !loading && !org.flexibleCollections && (flexibleCollectionsMigrationEnabled$ | async)
   "
 >
-  <h1 bitTypography="h1" class="tw-mt-16 tw-pb-2.5">{{ "collectionManagement" | i18n }}</h1>
+  <h1 bitTypography="h1" class="tw-mt-16 tw-pb-2.5">
+    {{ "collectionManagement" | i18n }}
+    <span bitBadge variant="warning" class="!tw-align-middle">{{ "beta" | i18n }}</span>
+  </h1>
   <p>
     {{ "collectionEnhancementsDesc" | i18n }}
     <!-- TODO: insert link to help docs when known -->
