--- a/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
+++ b/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
@@ -9,7 +9,16 @@
   <li>Unlimited secure secret storage and sharing</li>
   <li>End-to-end encryption</li>
 </ul>
-<div class="tw-mt-28 tw-flex tw-flex-col tw-items-center tw-gap-5">
+<div class="tw-mt-12 tw-flex tw-flex-col">
+  <app-callout type="info" icon="bwi-star" title="Limited Time Offer!">
+    <ul class="tw-list-outside tw-space-y-4">
+      <li>Sign up today and receive a 12-month subscription to Bitwarden Password Manager</li>
+      <li>Experience complete security across your organization</li>
+      <li>Secure all your sensitive credentials, from passwords to machine secrets</li>
+    </ul>
+  </app-callout>
+</div>
+<div class="tw-mt-12 tw-flex tw-flex-col tw-items-center tw-gap-5">
   <app-review-blurb
     header="Businesses trust Bitwarden to secure their secrets"
     quote="At this point, it would be almost impossible to leak our secrets. It's just one less thing we have to worry about."
