PM-5242 - UserVerificationDialogComp html - finish comment

--- a/libs/auth/src/angular/user-verification/user-verification-dialog.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-dialog.component.html
@@ -88,7 +88,7 @@
           <!-- For no client verifications found, show set a pin confirm button. 
             Note: this doesn't make sense for web as web doesn't support PINs, but this is how we are handling it for now 
           as the expectation is that only browser and desktop will use the new clientSideOnlyVerification flow. 
-          We might genericize this in the future to just tell the user they need to configure their   -->
+          We might genericize this in the future to just tell the user they need to configure a valid user verification option like PIN or Biometrics.  -->
           <button type="submit" bitButton bitFormButton buttonType="primary">
             {{ "setPin" | i18n }}
           </button>
