--- a/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
+++ b/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
@@ -10,13 +10,18 @@
   <li>End-to-end encryption</li>
 </ul>
 <div class="tw-mt-12 tw-flex tw-flex-col">
-  <app-callout type="info" icon="bwi-star" title="Limited Time Offer!">
-    <ul class="tw-list-outside tw-space-y-4">
-      <li>Sign up today and receive a 12-month subscription to Bitwarden Password Manager</li>
-      <li>Experience complete security across your organization</li>
-      <li>Secure all your sensitive credentials, from passwords to machine secrets</li>
-    </ul>
-  </app-callout>
+  <div class="tw-rounded-3xl tw-bg-background">
+    <div class="tw-my-8 tw-mx-6">
+      <h2 class="tw-pl-5 tw-font-semibold">Limited time offer</h2>
+      <ul class="tw-space-y-4 tw-mt-4 tw-pl-10">
+        <li>
+          Sign up today and receive a free 12-month subscription to Bitwarden Password Manager
+        </li>
+        <li>Experience complete security across your organization</li>
+        <li>Secure all your sensitive credentials, from passwords to machine secrets</li>
+      </ul>
+    </div>
+  </div>
 </div>
 <div class="tw-mt-12 tw-flex tw-flex-col tw-items-center tw-gap-5">
   <app-review-blurb
