--- a/apps/web/src/app/vault/individual-vault/vault-header/vault-header.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-header/vault-header.component.html
@@ -1,4 +1,4 @@
-<app-header>
+<app-header [title]="title" [icon]="icon">
   <bit-breadcrumbs *ngIf="showBreadcrumbs" slot="breadcrumbs">
     <bit-breadcrumb
       *ngIf="activeOrganizationId"
@@ -21,20 +21,14 @@
     </ng-container>
   </bit-breadcrumbs>
 
-  <h1 bitTypography="h1" slot="title">
-    <i
-      *ngIf="filter.collectionId && filter.collectionId !== All"
-      class="bwi bwi-collection"
-      aria-hidden="true"
-    ></i>
-    <span>{{ title }}</span>
+  <ng-container slot="title-suffix">
     <ng-container *ngIf="collection !== undefined && (canEditCollection || canDeleteCollection)">
       <button
         bitIconButton="bwi-angle-down"
         [bitMenuTriggerFor]="editCollectionMenu"
         size="small"
         type="button"
-        aria-haspopup
+        aria-haspopup="true"
       ></button>
       <bit-menu #editCollectionMenu>
         <button
@@ -71,7 +65,7 @@
       ></i>
       <span class="tw-sr-only">{{ "loading" | i18n }}</span>
     </small>
-  </h1>
+  </ng-container>
 
   <div *ngIf="filter.type !== 'trash'" class="tw-shrink-0">
     <div appListDropdown>
