--- a/apps/web/src/app/admin-console/organizations/settings/account.component.html
+++ b/apps/web/src/app/admin-console/organizations/settings/account.component.html
@@ -63,8 +63,7 @@
   </h1>
   <p>
     {{ "collectionEnhancementsDesc" | i18n }}
-    <!-- TODO: insert link to help docs when known -->
-    <a href="" target="_blank" rel="noopener">
+    <a href="https://bitwarden.com/help/collection-management" target="_blank" rel="noopener">
       {{ "collectionEnhancementsLearnMore" | i18n }}
     </a>
   </p>
