--- a/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
+++ b/apps/web/src/app/auth/trial-initiation/content/secrets-manager-content.component.html
@@ -1,7 +1,7 @@
 <h1 class="tw-text-4xl !tw-text-alt2">{{ header }}</h1>
 <div class="tw-pt-16">
   <h2 class="tw-text-2xl tw-font-semibold">
-    Secure your business with easy-to-use secrets management.
+    Secure your business with easy-to-use secrets management
   </h2>
 </div>
 <ul class="tw-mt-12 tw-flex tw-flex-col tw-gap-10 tw-text-2xl tw-text-main">
@@ -10,7 +10,7 @@
   <li>End-to-end encryption</li>
 </ul>
 <div class="tw-mt-12 tw-flex tw-flex-col">
-  <div class="tw-rounded-3xl tw-bg-background">
+  <div class="tw-rounded-[32px] tw-bg-background">
     <div class="tw-my-8 tw-mx-6">
       <h2 class="tw-pl-5 tw-font-semibold">Limited time offer</h2>
       <ul class="tw-space-y-4 tw-mt-4 tw-pl-10">
