--- a/apps/web/src/app/auth/trial-initiation/secrets-manager/secrets-manager-trial-free-stepper.component.html
+++ b/apps/web/src/app/auth/trial-initiation/secrets-manager/secrets-manager-trial-free-stepper.component.html
@@ -3,6 +3,7 @@
     label="{{ 'createAccount' | i18n | titlecase }}"
     [editable]="false"
     [subLabel]="subLabels.createAccount"
+    [addSubLabelSpacing]="true"
   >
     <app-register-form [isInTrialFlow]="true" (createdAccount)="accountCreated($event)">
     </app-register-form>
