--- a/apps/web/src/app/auth/trial-initiation/secrets-manager/secrets-manager-trial-paid-stepper.component.html
+++ b/apps/web/src/app/auth/trial-initiation/secrets-manager/secrets-manager-trial-paid-stepper.component.html
@@ -2,7 +2,8 @@
   <app-vertical-step
     label="{{ 'createAccount' | i18n | titlecase }}"
     [editable]="false"
-    [subLabel]="subLabels.createAccount"
+    [subLabel]="createAccountLabel"
+    [addSubLabelSpacing]="true"
   >
     <app-register-form [isInTrialFlow]="true" (createdAccount)="accountCreated($event)">
     </app-register-form>
