--- a/apps/web/src/app/admin-console/organizations/layouts/organization-layout.component.html
+++ b/apps/web/src/app/admin-console/organizations/layouts/organization-layout.component.html
@@ -40,8 +40,10 @@
       *ngIf="canShowBillingTab(organization)"
     >
       <bit-nav-item [text]="'subscription' | i18n" route="billing/subscription"></bit-nav-item>
-      <bit-nav-item [text]="'paymentMethod' | i18n" route="billing/payment-method"></bit-nav-item>
-      <bit-nav-item [text]="'billingHistory' | i18n" route="billing/history"></bit-nav-item>
+      <ng-container *ngIf="showPaymentAndHistory$ | async">
+        <bit-nav-item [text]="'paymentMethod' | i18n" route="billing/payment-method"></bit-nav-item>
+        <bit-nav-item [text]="'billingHistory' | i18n" route="billing/history"></bit-nav-item>
+      </ng-container>
     </bit-nav-group>
     <bit-nav-group
       icon="bwi-cog"
