--- a/apps/browser/src/auth/popup/two-factor.component.html
+++ b/apps/browser/src/auth/popup/two-factor.component.html
@@ -23,6 +23,7 @@
     </div>
   </header>
   <main tabindex="-1">
+    <!-- Authenticator / Email -->
     <ng-container
       *ngIf="
         selectedProviderType === providerType.Authenticator ||
@@ -59,6 +60,7 @@
         </div>
       </div>
     </ng-container>
+    <!-- YubiKey -->
     <ng-container *ngIf="selectedProviderType === providerType.Yubikey">
       <div class="content text-center">
         <p class="text-center">{{ "insertYubiKey" | i18n }}</p>
@@ -85,6 +87,7 @@
         </div>
       </div>
     </ng-container>
+    <!-- WebAuthN (not-webAuthN tab) -->
     <ng-container *ngIf="selectedProviderType === providerType.WebAuthn && !webAuthnNewTab">
       <div id="web-authn-frame">
         <iframe id="webauthn_iframe" sandbox="allow-scripts allow-same-origin"></iframe>
@@ -98,6 +101,7 @@
         </div>
       </div>
     </ng-container>
+    <!-- WebAuthN (webAuthN tab) -->
     <ng-container *ngIf="selectedProviderType === providerType.WebAuthn && webAuthnNewTab">
       <div class="content text-center" *ngIf="webAuthnNewTab">
         <p class="text-center">{{ "webAuthnNewTab" | i18n }}</p>
@@ -106,26 +110,53 @@
         </button>
       </div>
     </ng-container>
+    <!-- Duo -->
     <ng-container
       *ngIf="
         selectedProviderType === providerType.Duo ||
         selectedProviderType === providerType.OrganizationDuo
       "
     >
-      <div id="duo-frame">
-        <iframe
-          id="duo_iframe"
-          sandbox="allow-scripts allow-forms allow-same-origin allow-popups allow-popups-to-escape-sandbox"
-        ></iframe>
-      </div>
-      <div class="box">
-        <div class="box-content">
-          <div class="box-content-row box-content-row-checkbox" appBoxRow>
-            <label for="remember">{{ "rememberMe" | i18n }}</label>
-            <input id="remember" type="checkbox" name="Remember" [(ngModel)]="remember" />
+      <ng-container *ngIf="duoFrameless">
+        <p
+          *ngIf="selectedProviderType === providerType.OrganizationDuo"
+          class="tw-mb-0 tw-text-center"
+        >
+          {{ "duoRequiredByOrgForAccount" | i18n }}
+        </p>
+
+        <p class="tw-text-center" *ngIf="!inPopout">
+          {{ "openExtensionInNewWindowToCompleteLogin" | i18n }}
+        </p>
+
+        <ng-container *ngIf="inPopout">
+          <p class="tw-text-center">{{ "launchDuoAndFollowStepsToFinishLoggingIn" | i18n }}</p>
+
+          <ng-container *ngTemplateOutlet="duoRememberMe"></ng-container>
+        </ng-container>
+      </ng-container>
+
+      <ng-container *ngIf="!duoFrameless">
+        <div id="duo-frame">
+          <iframe
+            id="duo_iframe"
+            sandbox="allow-scripts allow-forms allow-same-origin allow-popups allow-popups-to-escape-sandbox"
+          ></iframe>
+        </div>
+
+        <ng-container *ngTemplateOutlet="duoRememberMe"></ng-container>
+      </ng-container>
+
+      <ng-template #duoRememberMe>
+        <div class="box">
+          <div class="box-content">
+            <div class="box-content-row box-content-row-checkbox" appBoxRow>
+              <label for="remember">{{ "rememberMe" | i18n }}</label>
+              <input id="remember" type="checkbox" name="Remember" [(ngModel)]="remember" />
+            </div>
           </div>
         </div>
-      </div>
+      </ng-template>
     </ng-container>
     <div class="box-content-row" [hidden]="!showCaptcha()">
       <iframe id="hcaptcha_iframe" height="80" sandbox="allow-scripts allow-same-origin"></iframe>
@@ -134,12 +165,53 @@
       <p class="text-center">{{ "noTwoStepProviders" | i18n }}</p>
       <p class="text-center">{{ "noTwoStepProviders2" | i18n }}</p>
     </div>
+    <!-- Buttons -->
     <div class="content no-vpad" *ngIf="selectedProviderType != null">
-      <p class="text-center">
-        <button type="button" appStopClick (click)="anotherMethod()">
-          {{ "useAnotherTwoStepMethod" | i18n }}
+      <ng-container
+        *ngIf="
+          duoFrameless &&
+          (selectedProviderType === providerType.Duo ||
+            selectedProviderType === providerType.OrganizationDuo)
+        "
+      >
+        <button
+          *ngIf="inPopout"
+          bitButton
+          type="button"
+          class="tw-mb-2"
+          buttonType="primary"
+          [block]="true"
+          appStopClick
+          (click)="launchDuoFrameless()"
+        >
+          {{ "launchDuo" | i18n }}
         </button>
-      </p>
+
+        <button
+          *ngIf="!inPopout"
+          bitButton
+          type="button"
+          class="tw-mb-2"
+          buttonType="primary"
+          [block]="true"
+          appStopClick
+          (click)="popoutExtension()"
+        >
+          {{ "popoutExtension" | i18n }}
+        </button>
+      </ng-container>
+
+      <button
+        bitButton
+        type="button"
+        buttonType="secondary"
+        [block]="true"
+        appStopClick
+        (click)="anotherMethod()"
+      >
+        {{ "useAnotherTwoStepMethod" | i18n }}
+      </button>
+
       <p *ngIf="selectedProviderType === providerType.Email" class="text-center">
         <button type="button" appStopClick (click)="sendEmail(true)" [appApiAction]="emailPromise">
           {{ "sendVerificationCodeEmailAgain" | i18n }}
