--- a/libs/auth/src/components/anon-layout.component.html
+++ b/libs/auth/src/components/anon-layout.component.html
@@ -6,7 +6,7 @@
       <div *ngIf="icon" class="tw-mb-8">
         <bit-icon [icon]="iconType"></bit-icon>
       </div>
-      <bit-icon [icon]="logo" class="tw-mx-auto tw-block tw-max-w-xs"></bit-icon>
+      <bit-icon [icon]="logo" class="tw-mx-auto tw-block tw-max-w-72 sm:tw-max-w-xs"></bit-icon>
     </div>
     <h1 *ngIf="title" bitTypography="h3" class="tw-mt-8 sm:tw-text-2xl">
       {{ title }}
