get latest, fix conflicts, update onboarding install extension logic

--- a/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
@@ -34,7 +34,7 @@
       [title]="'installBrowserExtension' | i18n"
       icon="bwi-cli"
       (click)="navigateToExtension()"
-      [completed]="(onboardingTasks$ | async).installExtension"
+      [completed]="onboardingTasks.vaultTasks.installExtension"
     >
       <span class="tw-pl-1">
         {{ "installBrowserExtensionDetails" | i18n }}
