add container to all page components

--- a/apps/web/src/app/auth/settings/security/security.component.html
+++ b/apps/web/src/app/auth/settings/security/security.component.html
@@ -6,4 +6,6 @@
   </bit-tab-nav-bar>
 </app-header>
 
-<router-outlet></router-outlet>
+<bit-container>
+  <router-outlet></router-outlet>
+</bit-container>
