--- a/apps/web/src/app/tools/reports/pages/reports-home.component.html
+++ b/apps/web/src/app/tools/reports/pages/reports-home.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
-<p>{{ "reportsDesc" | i18n }}</p>
+<bit-container>
+  <p>{{ "reportsDesc" | i18n }}</p>
 
-<app-report-list [reports]="reports"></app-report-list>
+  <app-report-list [reports]="reports"></app-report-list>
+</bit-container>
