--- a/apps/desktop/src/auth/two-factor.component.html
+++ b/apps/desktop/src/auth/two-factor.component.html
@@ -84,12 +84,7 @@
         </ng-container>
 
         <!-- Duo -->
-        <ng-container
-          *ngIf="
-            selectedProviderType === providerType.Duo ||
-            selectedProviderType === providerType.OrganizationDuo
-          "
-        >
+        <ng-container *ngIf="isDuoProvider">
           <ng-container *ngIf="duoFrameless">
             <div>
               <span *ngIf="selectedProviderType === providerType.OrganizationDuo" class="tw-mb-0">
@@ -153,11 +148,7 @@
             type="submit"
             class="btn primary block"
             [disabled]="form.loading"
-            *ngIf="
-              selectedProviderType != null &&
-              selectedProviderType !== providerType.Duo &&
-              selectedProviderType !== providerType.OrganizationDuo
-            "
+            *ngIf="selectedProviderType != null && !isDuoProvider"
           >
             <span [hidden]="form.loading"
               ><i class="bwi bwi-sign-in" aria-hidden="true"></i> {{ "continue" | i18n }}</span
@@ -171,12 +162,7 @@
             type="button"
             class="btn primary block"
             [disabled]="form.loading"
-            *ngIf="
-              duoFrameless &&
-              selectedProviderType != null &&
-              (selectedProviderType === providerType.Duo ||
-                selectedProviderType === providerType.OrganizationDuo)
-            "
+            *ngIf="duoFrameless && selectedProviderType != null && isDuoProvider"
           >
             <b> {{ "launchDuo" | i18n }} </b>
           </button>
