[PM-6041] Update banner copy to read "web app"

--- a/apps/web/src/app/layouts/header/web-header.component.html
+++ b/apps/web/src/app/layouts/header/web-header.component.html
@@ -3,7 +3,7 @@
   (onClose)="hideBanner()"
   *ngIf="showBanner$ | async"
 >
-  {{ "newWebVault" | i18n }}
+  {{ "newWebApp" | i18n }}
   <a href="https://bitwarden.com" bitLink linkType="contrast">{{ "releaseBlog" | i18n }}</a>
 </bit-banner>
 <header
