--- a/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="
-    isNewAccount && showOnboarding && showOnboardingAccess && onboardingTasks$
+    isNewAccount && showOnboarding && (showOnboardingAccess$ | async) && onboardingTasks$
       | async as onboardingTasks
   "
   class="tw-mb-6"
