remove containerWidth value as inputs. updated badgeList to remove flex for secondary variant so badges can wrap

--- a/apps/web/src/app/vault/org-vault/group-badge/group-name-badge.component.html
+++ b/apps/web/src/app/vault/org-vault/group-badge/group-name-badge.component.html
@@ -1,6 +1,1 @@
-<bit-badge-list
-  [items]="groupNames"
-  [maxItems]="3"
-  variant="secondary"
-  [containerWidth]="containerWidth"
-></bit-badge-list>
+<bit-badge-list [items]="groupNames" [maxItems]="3" variant="secondary"></bit-badge-list>
